...
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_List"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/textView_List_callToAction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/seven_grid_unit"
        android:fontFamily="sans-serif-medium"
        android:text="@string/error_no_restaurants"
...
